fix(omi):fix dark mode

--- a/components/common/scss/dark.scss
+++ b/components/common/scss/dark.scss
@@ -42,6 +42,7 @@
   --omi-bg-color-component-disabled: var(--omi-gray-color-12);          // 色彩 - 组件 - disabled
 
   --omi-bg-cascader-hover:var(--omi-gray-color-11);
+  --omi-treenode-focus:var(--omi-gray-color-11);
   // 特殊组件背景色，目前只用于 button、input 组件多主题场景，浅色主题下固定为白色，深色主题下为 transparent 适配背景颜色
   --omi-bg-color-specialcomponent: transparent;
 
